--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,20 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity
-            android:name=".MainActivity"
-            android:windowSoftInputMode="adjustNothing">
+        <activity android:name=".LoadingActivity"
+            android:theme="@style/LoadingTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustNothing">
         </activity>
         <activity android:name=".GameActivity"/>
         <activity android:name=".ContactActivity"/>
