--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation 'noman.placesapi:placesAPI:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:multidex:+'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
